--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ I do what I like. PLEASE NOTE THAT THIS WEBSITE IS NOT MADE FOR A SMALL SCREEN A
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 29 July, 2005</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 9855154388</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 9855******</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Chandigarh, India</li>
                 </ul>
               </div>
