--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Bit of an Artist &amp; Web Developer.</h3>
             <p class="font-italic">
-I do what I like. PLEASE NOTE THAT THIS WEBSITE IS NOT MADE FOR A SMALL SCREEN AND WORKS 10 TIMES BETTER ON A LARGE SCREEN
+She Calls Me Daddy. 
             </p>
             <div class="row">
               <div class="col-lg-6">
