--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Bit of an Artist &amp; Web Developer.</h3>
             <p class="font-italic">
-She Calls Me Daddy. 
+Daddy she calls me. 
             </p>
             <div class="row">
               <div class="col-lg-6">
